// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Successfully loaded a Document in view 1`] = `
<div
  className="timeline__view"
>
  <div>
    <TimelineRadioButtons
      onChange={[MockFunction]}
      selectedOption="Documents"
    />
  </div>
</div>
`;

exports[`Successfully loaded a Video in view 1`] = `
<div
  className="timeline__view"
>
  <div>
    <TimelineRadioButtons
      onChange={[MockFunction]}
      selectedOption="Debates"
    />
  </div>
</div>
`;

exports[`Successfully loaded view 1`] = `
<div
  className="timeline__view"
>
  <div>
    <TimelineRadioButtons
      onChange={[MockFunction]}
      selectedOption="Debates"
    />
  </div>
</div>
`;

exports[`View loading 1`] = `
<div
  className="timeline__view"
>
  <div
    className="timeline__preview"
  >
    <div
      className="document document--static"
    >
      <p
        className="document__text"
      >
        Loading Timeline
      </p>
    </div>
  </div>
</div>
`;
